<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/otpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/otp_verification"
        android:textColor="@color/black"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/otpSentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:drawablePadding="15dp"
        android:drawableTop="@drawable/ic_otp_msg"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/otp_code_has_been_sent"
        android:textColor="@color/lightBlack"
        android:textSize="12.5dp"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="25dp"
        app:cardElevation="3dp">

        <EditText
            android:id="@+id/enterOTPCodeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:padding="08dp"
            android:drawableLeft="@drawable/ic_verify"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_verify"
            android:hint="@string/enter_otp_code"
            android:inputType="number"
            android:textColor="@color/lightgrey"
            android:textSize="12.5dp"
            />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/verifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="08dp"

        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/resendOtpTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/resendOtp"
        android:textColor="@color/black"
        android:textSize="14dp"
        />


</LinearLayout>