<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/tvOtpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/sfui_text_regular"
            />

        <TextView
            android:id="@+id/tvOtpHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:drawablePadding="@dimen/padding_small"
            android:drawableTop="@drawable/ic_reset_password"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/enter_your_registered"
            android:textColor="@color/blackLight"
            android:textSize="@dimen/font" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_mini"
            android:layout_marginRight="@dimen/margin_mini"
            android:layout_marginTop="@dimen/margin_large"
            android:minHeight="@dimen/view_height"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCountryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_mobile"
                    android:drawablePadding="@dimen/padding_small"
                    android:gravity="center|start"
                    android:background="?attr/selectableItemBackground"
                    android:minHeight="@dimen/view_height_40"
                    android:paddingLeft="@dimen/padding_small"
                    android:text="+91"
                    android:textColorHint="@color/lightgrey"
                    android:textSize="13.5sp" />


                <EditText
                    android:id="@+id/etMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:background="@null"
                    android:drawablePadding="@dimen/padding_small"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number"
                    android:textColorHint="@color/lightgrey"
                    android:padding="@dimen/padding_small"
                    android:textColor="@color/blackShade"
                    android:textSize="13sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnResetPassword"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_40"
            android:layout_marginLeft="@dimen/margin_mini"
            android:layout_marginRight="@dimen/margin_mini"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/reset_password_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>


</FrameLayout>
