<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/currentPasswordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/current_password"
                        android:inputType="textPersonName"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        />

                </android.support.design.widget.TextInputLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:layout_marginTop="07dp"
                    android:background="@color/shadow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/lightgrey"
                        android:textColor="@color/blackShade"
                        android:textSize="@dimen/font_13"
                        />

                </android.support.design.widget.TextInputLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:layout_marginTop="07dp"
                    android:background="@color/shadow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/confirmPassEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingTop="10dp"
                        android:textColorHint="@color/lightgrey"
                        android:singleLine="true"
                        android:textColor="@color/blackShade"
                        android:textSize="@dimen/font_13"
                        />

                </android.support.design.widget.TextInputLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:layout_marginTop="07dp"
                    android:background="@color/shadow" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/submitBtnTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/update_password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            />


    </LinearLayout>

</LinearLayout>
